--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: '16.x'
 
     - name: Routes
-      run: cd ./cancun_Adventures/
+      run: cd ./cancun-adventures-cancun_adventures-6fb4bfd04759/cancun_Adventures
 
     - name: Install dependencies
       run: npm install
