--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm install -g @angular/cli
 
     - name: Build
-      run: npm run build:prod
+      run: ng build
 
     - name: Deploy
       if: success()
