--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Angular
       run: npm install -g @angular/cli
 
+    - name: Routes
+      run: cd ./cancun-adventures-cancun_adventures-6fb4bfd04759/cancun_Adventures
+
     - name: Build
       run: ng build
 
