--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm install
 
     - name: Angular
-      run: npm install -g @angular/cli
+      run: npm install -g @angular/cli@latest
 
     - name: Routes
       run: cd ./cancun_Adventures/
