--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
 
     - name: Angular
       run: npm install -g @angular/cli@latest
-      
+
     - name: Build
-      run: npm run build
+      run: ng build
 
     - name: Deploy
       if: success()
