--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,14 @@ jobs:
       with:
         node-version: '16.x'
 
-    - name: Routes
-      run: cd ./cancun_Adventures/
-
     - name: Install dependencies
       run: npm install
 
     - name: Angular
       run: npm install -g @angular/cli@latest
-
+      
     - name: Build
-      run: ng build
+      run: npm run build
 
     - name: Deploy
       if: success()
