--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm install -g @angular/cli@latest
       
     - name: Build
-      run: npm run build
+      run: ng build
 
     - name: Deploy
       if: success()
