--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         node-version: '16.x'
 
+    - name: Routes
+      run: cd ./cancun_Adventures/
+
     - name: Install dependencies
       run: npm install
 
